# dagster_pipelines

./: .dockerignore  .gitignore  .pdm-python  .pdm.toml  .pre-commit-config.yaml  Dockerfile_dagster  Dockerfile_data_pipelines  README.md  dagster.yaml  docker-compose.yaml  pyproject.toml  requirements.txt  setup.py  sonar-project.properties  workspace.yaml
.github/workflows/: build-deploy.yaml  continuous_integration.yml  maunal-test.yaml
data_pipelines/: __init__.py  settings.py
data_pipelines/pipelines/: __init__.py
data_pipelines/pipelines/usaf_docket/: usaf_docket.py  usaf_docket_pipeline.py  usaf_docket_types.py  usaf_docket_utilities.py
data_pipelines/resources/: __init__.py  resources.py
data_pipelines_tests/test_default/: test_pytest_configured.py
data_pipelines_tests/test_usaf_docket/: conftest.py  test_usaf_docket.py
dbt_pipelines/: dbt_project.yml
dbt_pipelines/config/: .user.yml  profiles.yml
dbt_pipelines/models/gold/: active_cases.sql  inactive_cases.sql
dbt_pipelines/models/gold/usaf_docket/: dev.sql  usaf_cases_active.sql  usaf_cases_inactive.sql  usaf_charges.sql
dbt_pipelines/models/silver/: sources.yml  stg_usaf_bases.sql
dbt_pipelines/models/silver/usaf_docket/: schema.yml  sources.yml  stg_usaf_bases.sql  stg_usaf_cases_active.sql  stg_usaf_cases_charges.sql  stg_usaf_cases_inactive.sql  stg_usaf_cases_personnel.sql  stg_usaf_charges.sql  usaf_cases_active.sql  usaf_cases_inactive.sql  usaf_charges.sql
dbt_pipelines/snapshots/bronze/usaf_docket/: usaf_bases_raw_snapshot.sql  usaf_cases_charges_raw_snapshot.sql  usaf_cases_info_raw_snapshot.sql  usaf_cases_personnel_raw_snapshot.sql  usaf_charges_raw_snapshot.sql
