[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "ruff>=0.0.259",
    "black>=23.1.0",
    "isort>=5.12.0",
    "dagit>=1.2.3",
    "pre-commit>=3.2.1",
    "pytest-sugar>=0.9.6",
    "python-dotenv>=1.0.0",
]
cicd = [
    "pytest>=7.2.2",
    "mypy>=1.1.1",
    "bandit>=1.7.5",
    "safety>=2.3.4",
]
[tool.dagster]
module_name="data_pipelines"

[project]
name = "data_pipelines"
version = "0.1.0"
description = "A dagster deployment to orchestrate data pipelines."
authors = [
    {name = "daniel daum", email = "daniel_daum@outlook.com"},
]
dependencies = [
    "dagster>=1.2.3",
    "dagster-aws>=0.18.3",
    "dagster-postgres>=0.18.3",
    "dagster-dbt>=0.18.3",
    "requests>=2.28.2",
    "pandas>=1.5.3",
    "dagster-pandas>=0.18.3",
    "dagster-snowflake>=0.18.3",
    "dagster-pyspark>=0.18.3",
    "dagster-pagerduty>=0.18.3",
    "snowflake-connector-python[pandas]>=3.0.2",
    "hypothesis>=6.70.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "None"}

[build-system]
requires = ["pdm-pep517>=1.0"]
build-backend = "pdm.pep517.api"
