[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "dagit>=1.2.7",
    "pytest>=7.3.0",
    "pytest-sugar>=0.9.7",
    "pytest-cov>=4.0.0",
    "black>=23.3.0",
    "isort>=5.12.0",
    "mypy>=1.2.0",
]

[tool.dagster]
module_name="data_pipelines"

[project]
name = ""
version = ""
description = ""
authors = [
    {name = "daniel daum", email = "daniel_daum@outlook.com"},
]
dependencies = [
    "dagster>=1.2.7",
    "dagster-postgres>=0.18.7",
    "dagster-docker>=0.18.7",
    "dagster-aws>=0.18.7",
    "dagster-dbt>=0.18.7",
    "dagster-pandas>=0.18.7",
    "requests>=2.28.2",
    "pandas>=2.0.0",
    "boto3>=1.26.112",
    "sqlalchemy>=1.4.47",
    "psycopg2>=2.9.6",
    "dbt-postgres>=1.4.5",
    "dbt-core>=1.4.5",
    "defusedxml>=0.7.1",
    "python-dotenv>=1.0.0",
]
requires-python = ">=3.11"
license = {text = "None"}
